updated the buttons

--- a/html_assignment/register.html
+++ b/html_assignment/register.html
@@ -37,25 +37,32 @@
             <br><br>
             <br><br>
             <table>
-            <tr><td><input type="text" id="input-type" name="first_name" value="Enter first name"></td>
+            <tr><td><input type="text" id="input-type" name="first_name" placeholder="Enter first name"></td>
             <td></td>
             <td></td>
-            <td> <input type="text" id="input-type" name="last_name" value="Enter last name"/></td></tr>
+            <td> <input type="text" id="input-type" name="last_name" placeholder="Enter last name"/></td></tr>
             <tr></tr>
             <tr></tr>
             <tr></tr>
-            <tr><td><input type="text" id="input-type" name="company_name" value="Enter company name"></td>
+            <tr><td><input type="text" id="input-type" name="company_name" placeholder="Enter company name"></td>
             <td></td>
             <td></td>
-            <td><input type="text" id="input-type" name="email" value="Enter email"/><td></tr>
+            <td><input type="text" id="input-type" name="email" placeholder="Enter email"/><td></tr>
             <tr></tr>
             <tr></tr>
             <tr></tr>
           </table>
-            <input type="text" id="psswd" name="password" value="Enter password"/>
+            <input type="text" id="psswd" name="password" placeholder="Enter password"/>
         <br>
+        <p>password strength</p>
+        <hr style="width: 80%">
+            <input type="radio"><label>8 characters</label>
+            <input type="radio"><label>UpperCases</label>
+            <input type="radio"><label>LowerCase</label>
+            <input type="radio"><label>numbers</label>
+            <input type="radio"><label>special characters</label>
         <br>  <button id="b2">Sign Up</button>
-            <br><p>OR</p>
+            <br><p>-----OR-----</p>
             <button id='b3'>Connect with Google</button>
           </div>
         </div>
@@ -66,7 +73,8 @@
   <div class="footer">
     <h2>YOU'RE IN GOOD COMPANY:</h2>
     <br>
-    <img src="images/ibm.svg">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/yale.svg">  &nbsp;&nbsp;&nbsp;&nbsp;<img src="images/un.svg">
+    <img src="images/ibm.svg">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/yale.svg">  &nbsp;&nbsp;&nbsp;&nbsp;<img src="images/un.svg">&nbsp;&nbsp;&nbsp;&nbsp;<button id="b4" type="button">more</button>
+  </div>
   </div>
   </body>
 </html>
