edited the right div

--- a/html_assignment/register.html
+++ b/html_assignment/register.html
@@ -10,11 +10,12 @@
   </head>
 
   <body>
-    <div>
+
           <div class="header-style">
             <h1>PANTHEON<sup>&#174;</sup></h1>
           </div>
    <!-- section code starts here -->
+   <div>
       <div class="section-style">
           <center>  <h1>Create Your Free Account</h1></center>
           <center>  <h3 id="h2-font"><center>Join over 150,000 developers using Pantheon to create amazing digital experiences.</center></h3>
@@ -24,7 +25,7 @@
             <img src="images/img1.png" alt="computer">
             <h1>All Pantheon Plans Include:</h1>
             <ul>
-              <li><h3 class="fa fa-check">Two Free Sandbox Sites</h3></li>
+              <li><h3 class="fa fa-check fa-sm-6">Two Free Sandbox Sites</h3></li>
               <li><h3 class="fa fa-check">Git-Based Dev, Test, And Live Environments</h3></li>
               <li><h3 class="fa fa-check">Free HTTPS (SSL) Certificates</h3></li>
               <li><h3 class="fa fa-check">Integrated Content Delivery Network (CDN)</h3></li>
@@ -54,27 +55,34 @@
           </table>
             <input type="text" id="psswd" name="password" placeholder="Enter password"/>
         <br>
-        <p>password strength</p>
-        <hr style="width: 80%">
+        <p style="text-align: left;margin-left:20%"><b>password strength:</b></p>
+        <div>
+        <hr style="width: 60%"><p style="margin-right:29%">
             <input type="radio"><label>8 characters</label>
-            <input type="radio"><label>UpperCases</label>
+            <input type="radio"><label>UpperCases</label></p>
+            <br><p style="margin-right:10%">
             <input type="radio"><label>LowerCase</label>
             <input type="radio"><label>numbers</label>
-            <input type="radio"><label>special characters</label>
+            <input type="radio"><label>special characters</label></p1><br><br>
+            <input type="checkbox"><label><b>Are you an agency?</b> (additional WebOps tools for agency developers</label>
+            <br><input type="checkbox"><label><b>Are you an EDU? </b>(additional features to manage your school's sites)</label>
+            <br><p style="margin-right:47%"><input type="checkbox"><legal>I agree to Pantheon's <a href="#">Terms of Use</a>.</label>
+          </div>
         <br>  <button id="b2">Sign Up</button>
             <br><p>-----OR-----</p>
             <button id='b3'>Connect with Google</button>
+            <br>
           </div>
         </div>
       </div>
     <!-- section code ends here -->
+</div>
 
-  </div>
   <div class="footer">
     <h2>YOU'RE IN GOOD COMPANY:</h2>
     <br>
     <img src="images/ibm.svg">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/yale.svg">  &nbsp;&nbsp;&nbsp;&nbsp;<img src="images/un.svg">&nbsp;&nbsp;&nbsp;&nbsp;<button id="b4" type="button">more</button>
   </div>
-  </div>
+
   </body>
 </html>
