left div edited

--- a/html_assignment/register.html
+++ b/html_assignment/register.html
@@ -25,9 +25,9 @@
             <img src="images/img1.png" alt="computer">
             <h1>All Pantheon Plans Include:</h1>
             <ul>
-              <li><h3 class="fa fa-check fa-sm-6">Two Free Sandbox Sites</h3></li>
+              <li style="margin-right:40%"><h3 class="fa fa-check fa-sm-6">Two Free Sandbox Sites</h3></li>
               <li><h3 class="fa fa-check">Git-Based Dev, Test, And Live Environments</h3></li>
-              <li><h3 class="fa fa-check">Free HTTPS (SSL) Certificates</h3></li>
+              <li style="margin-right:27%"><h3 class="fa fa-check">Free HTTPS (SSL) Certificates</h3></li>
               <li><h3 class="fa fa-check">Integrated Content Delivery Network (CDN)</h3></li>
             </ul>
           </div>
@@ -54,6 +54,7 @@
             <tr></tr>
           </table>
             <input type="text" id="psswd" name="password" placeholder="Enter password"/>
+            
         <br>
         <p style="text-align: left;margin-left:20%"><b>password strength:</b></p>
         <div>
