header style updated

--- a/html_assignment/register.html
+++ b/html_assignment/register.html
@@ -1,89 +1,109 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <title>register</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="register.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
-
   <body>
+    <div class="main-header">
+      <a href="#" style="color: white;padding-top:10px">
+          <h1 style="font-weight:1000;padding-top:10px">PANTHEON<sup>&#174;</sup></h1>
+      </a>
+    </div>
+    <!-- section code starts here -->
+    <div class="main-content">
+      <section class="container">
+        <div class="row">
+          <div class="section-top">
+              <h1>Create Your Free Account</h1>
+              <h3 id="h2-font"><center>Join over 150,000 developers using Pantheon to create amazing digital experiences.</h3>
+          </div>
+          <div class="section-middle">
+              <div class="section-left">
+                <img src="images/img1.png" alt="computer">
+                <h1>All Pantheon Plans Include:</h1>
+                <ul>
+                  <li style="margin-right:40%"><h3 class="fa fa-check fa-sm-6">Two Free Sandbox Sites</h3></li>
+                  <li><h3 class="fa fa-check">Git-Based Dev, Test, And Live Environments</h3></li>
+                  <li style="margin-right:27%"><h3 class="fa fa-check">Free HTTPS (SSL) Certificates</h3></li>
+                  <li><h3 class="fa fa-check">Integrated Content Delivery Network (CDN)</h3></li>
+                </ul>
+              </div>
+              <div class="section-right">
+                <h1>Sign-Up Now!</h1>
+                <h2><i>Pay for a plan when your site goes live.</i></h2>
+                <div id="b1">Signin with <b>Linkdin</b></div>
 
-          <div class="header-style">
-            <h1>PANTHEON<sup>&#174;</sup></h1>
-          </div>
-   <!-- section code starts here -->
-   <div>
-      <div class="section-style">
-          <center>  <h1>Create Your Free Account</h1></center>
-          <center>  <h3 id="h2-font"><center>Join over 150,000 developers using Pantheon to create amazing digital experiences.</center></h3>
+                <form>
+                  <div class="row">
+                    <div class="col-md-6 col-sm-12">
+                      <input type="text" id="input-type" name="first_name" placeholder="Enter first name">
+                    </div>
+                    <div class="col-md-6 col-sm-12">
+                      <input type="text" id="input-type" name="last_name" placeholder="Enter last name"/>
+                    </div>
+                    <div class="col-md-6 col-sm-12">
+                      <input type="text" id="input-type" name="company_name" placeholder="Enter company name">
+                    </div>
+                    <div class="col-md-6 col-sm-12">
+                      <input type="text" id="input-type" name="email" placeholder="Enter email"/>
+                    </div>
+                    <div class="col-sm-12">
+                      <input type="text" id="psswd" name="password" placeholder="Enter password"/>
+                      <p><b>password strength:</b></p>
+                      <div>
+                        <hr />
+                          <div class="password-status">
+                            <ul>
+                              <li class="min8"><i class="fas fa-check-circle"></i> Min. 8 Characters</li>
+                              <li class="hasSpecChar"><i class="fas fa-check-circle"></i> Special Character</li>
+                              <li class="min16"><i class="fas fa-check-circle"></i> 16 Characters and more</li>
+                              <li class="hasNum"><i class="fas fa-check-circle"></i> Number</li>
+                              <li class="hasUpcase"><i class="fas fa-check-circle"></i> Upper Case</li>
+                              <li class="hasLowcase"><i class="fas fa-check-circle"></i> Lower Case</li>
+                            </ul>
+                          </div>
+                      </div>
+                    </div>
 
-      <div class="section-inside">
-          <div class="section-left">
-            <img src="images/img1.png" alt="computer">
-            <h1>All Pantheon Plans Include:</h1>
-            <ul>
-              <li style="margin-right:40%"><h3 class="fa fa-check fa-sm-6">Two Free Sandbox Sites</h3></li>
-              <li><h3 class="fa fa-check">Git-Based Dev, Test, And Live Environments</h3></li>
-              <li style="margin-right:27%"><h3 class="fa fa-check">Free HTTPS (SSL) Certificates</h3></li>
-              <li><h3 class="fa fa-check">Integrated Content Delivery Network (CDN)</h3></li>
-            </ul>
-          </div>
-          <div class="section-right">
-            <h1>Sign-Up Now!</h1>
-            <h2><i>Pay for a plan when your site goes live.</i></h2>
-            <button id="b1">Signin with <b>Linkdin</b></button>
-            <br><br>
-            <br><br>
-            <table>
-            <tr><td><input type="text" id="input-type" name="first_name" placeholder="Enter first name"></td>
-            <td></td>
-            <td></td>
-            <td> <input type="text" id="input-type" name="last_name" placeholder="Enter last name"/></td></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr><td><input type="text" id="input-type" name="company_name" placeholder="Enter company name"></td>
-            <td></td>
-            <td></td>
-            <td><input type="text" id="input-type" name="email" placeholder="Enter email"/><td></tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
-          </table>
-            <input type="text" id="psswd" name="password" placeholder="Enter password"/>
-            
-        <br>
-        <p style="text-align: left;margin-left:20%"><b>password strength:</b></p>
-        <div>
-        <hr style="width: 60%"><p style="margin-right:29%">
-            <input type="radio"><label>8 characters</label>
-            <input type="radio"><label>UpperCases</label></p>
-            <br><p style="margin-right:10%">
-            <input type="radio"><label>LowerCase</label>
-            <input type="radio"><label>numbers</label>
-            <input type="radio"><label>special characters</label></p1><br><br>
-            <input type="checkbox"><label><b>Are you an agency?</b> (additional WebOps tools for agency developers</label>
-            <br><input type="checkbox"><label><b>Are you an EDU? </b>(additional features to manage your school's sites)</label>
-            <br><p style="margin-right:47%"><input type="checkbox"><legal>I agree to Pantheon's <a href="#">Terms of Use</a>.</label>
-          </div>
-        <br>  <button id="b2">Sign Up</button>
-            <br><p>-----OR-----</p>
-            <button id='b3'>Connect with Google</button>
-            <br>
+                    <div class="policy-container">
+                      <div class="policy-section">
+                        <input type="checkbox">
+                          <label><b>Are you an agency?</b> (additional WebOps tools for agency developers</label>
+                        </input>
+                      </div>
+                      <div class="policy-section">
+                        <input type="checkbox">
+                          <label><b>Are you an EDU? </b>(additional features to manage your school's sites)</label>
+                        </input>
+                      </div>
+                      <div class="policy-section">
+                        <input type="checkbox">
+                          <label>I agree to Pantheon's <a href="#">Terms of Use.</a></label>
+                        </input>
+                      </div>
+                    </div>
+                    <button id="b2">Sign Up</button>
+                    <br><p>-----OR-----</p>
+                    <button id='b3'>Connect with Google</button>
+                  </div>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
     <!-- section code ends here -->
-</div>
+    </div>
 
-  <div class="footer">
-    <h2>YOU'RE IN GOOD COMPANY:</h2>
-    <br>
-    <img src="images/ibm.svg">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/yale.svg">  &nbsp;&nbsp;&nbsp;&nbsp;<img src="images/un.svg">&nbsp;&nbsp;&nbsp;&nbsp;<button id="b4" type="button">more</button>
-  </div>
+    <div class="footer">
+      <h2>YOU'RE IN GOOD COMPANY:</h2>
+      <img src="images/ibm.svg">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/yale.svg">  &nbsp;&nbsp;&nbsp;&nbsp;<img src="images/un.svg">&nbsp;&nbsp;&nbsp;&nbsp;<button id="b4" type="button">more</button>
+    </div>
 
   </body>
 </html>
