top-section style updated

--- a/html_assignment/register.html
+++ b/html_assignment/register.html
@@ -19,8 +19,8 @@
       <section class="container">
         <div class="row">
           <div class="section-top">
-              <h1>Create Your Free Account</h1>
-              <h3 id="h2-font"><center>Join over 150,000 developers using Pantheon to create amazing digital experiences.</h3>
+              <h1 id="h1-font"><b>Create Your Free Account</b></h1>
+              <h3 id="h3-font">Join over 150,000 developers using Pantheon to create amazing digital experiences.</h3>
           </div>
           <div class="section-middle">
               <div class="section-left">
