right section updated

--- a/html_assignment/register.html
+++ b/html_assignment/register.html
@@ -25,18 +25,22 @@
           <div class="section-middle">
               <div class="section-left">
                 <img src="images/img1.png" alt="computer">
-                <h1>All Pantheon Plans Include:</h1>
-                <ul>
-                  <li style="margin-right:40%"><h3 class="fa fa-check fa-sm-6">Two Free Sandbox Sites</h3></li>
-                  <li><h3 class="fa fa-check">Git-Based Dev, Test, And Live Environments</h3></li>
-                  <li style="margin-right:27%"><h3 class="fa fa-check">Free HTTPS (SSL) Certificates</h3></li>
-                  <li><h3 class="fa fa-check">Integrated Content Delivery Network (CDN)</h3></li>
-                </ul>
+                <div>
+                  <h3><b>All Pantheon Plans Include:<b></h3>
+                  <ul>
+                    <li><h3 class="fa fa-check fa-sm-6">Two Free Sandbox Sites</h3></li>
+                    <li><h3 class="fa fa-check fa-sm-6">Git-Based Dev, Test, And Live Environments</h3></li>
+                    <li><h3 class="fa fa-check fa-sm-6">Free HTTPS (SSL) Certificates</h3></li>
+                    <li><h3 class="fa fa-check fa-sm-6" >Integrated Content Delivery Network (CDN)</h3></li>
+                  </ul>
+                </div>
               </div>
               <div class="section-right">
-                <h1>Sign-Up Now!</h1>
-                <h2><i>Pay for a plan when your site goes live.</i></h2>
-                <div id="b1">Signin with <b>Linkdin</b></div>
+                <h2><b>Sign-Up Now!</b></h2>
+                <h3><i>Pay for a plan when your site goes live.</i></h3>
+                <div>
+                  <button id="b1">Signin with <b>Linkdin</b></button>
+                </div>
 
                 <form>
                   <div class="row">
@@ -54,9 +58,15 @@
                     </div>
                     <div class="col-sm-12">
                       <input type="text" id="psswd" name="password" placeholder="Enter password"/>
-                      <p><b>password strength:</b></p>
+                    </div>
+                    <div style="color:grey">
                       <div>
-                        <hr />
+                      <p><b>password strength:</b></p>
+                    </div>
+
+                      <div>
+                        <hr class="pass">
+                      </div>
                           <div class="password-status">
                             <ul>
                               <li class="min8"><i class="fas fa-check-circle"></i> Min. 8 Characters</li>
