psswd status updated

--- a/html_assignment/register.html
+++ b/html_assignment/register.html
@@ -59,24 +59,26 @@
                     <div class="col-sm-12">
                       <input type="text" id="psswd" name="password" placeholder="Enter password"/>
                     </div>
-                    <div style="color:grey">
-                      <div>
+                    <div style="color:grey;">
+                      <div style="text-align:left;margin:10px 0px 0px 10px">
                       <p><b>password strength:</b></p>
                     </div>
 
                       <div>
                         <hr class="pass">
                       </div>
+                      <div>
                           <div class="password-status">
                             <ul>
-                              <li class="min8"><i class="fas fa-check-circle"></i> Min. 8 Characters</li>
-                              <li class="hasSpecChar"><i class="fas fa-check-circle"></i> Special Character</li>
-                              <li class="min16"><i class="fas fa-check-circle"></i> 16 Characters and more</li>
-                              <li class="hasNum"><i class="fas fa-check-circle"></i> Number</li>
-                              <li class="hasUpcase"><i class="fas fa-check-circle"></i> Upper Case</li>
-                              <li class="hasLowcase"><i class="fas fa-check-circle"></i> Lower Case</li>
+                              <li><i class="fas fa-check-circle"></i> Min. 8 Characters</li>
+                              <li><i class="fas fa-check-circle"></i> Special Character</li>
+                              <li><i class="fas fa-check-circle"></i> 16 Characters and more</li>
+                              <li><i class="fas fa-check-circle"></i> Number</li>
+                              <li><i class="fas fa-check-circle"></i> Upper Case</li>
+                              <li><i class="fas fa-check-circle"></i> Lower Case</li>
                             </ul>
                           </div>
+                        </div>
                       </div>
                     </div>
 
@@ -111,8 +113,11 @@
     </div>
 
     <div class="footer">
-      <h2>YOU'RE IN GOOD COMPANY:</h2>
-      <img src="images/ibm.svg">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/yale.svg">  &nbsp;&nbsp;&nbsp;&nbsp;<img src="images/un.svg">&nbsp;&nbsp;&nbsp;&nbsp;<button id="b4" type="button">more</button>
+      <h6 style="color:#616e77;padding-bottom:+5px"><b>YOU'RE IN GOOD COMPANY:</b></h6>
+      <img src="images/ibm.svg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <img src="images/yale.svg">  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <img src="images/un.svg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <button id="b4" type="button">more</button>
     </div>
 
   </body>
