applied patch file

--- a/html_assignment/register.html
+++ b/html_assignment/register.html
@@ -11,17 +11,17 @@
   <body>
     <div class="main-header">
       <a href="#" style="color: white;padding-top:10px">
-          <h1 style="font-weight:1000;padding-top:10px">PANTHEON<sup>&#174;</sup></h1>
+          <p style="font-weight:1000;padding-top:10px">PANTHEON<sup>&#174;</sup></p>
       </a>
+      <div class="section-top">
+          <h1 id="h1-font"><b>Create Your Free Account</b></h1>
+          <h3 id="h3-font">Join over 150,000 developers using Pantheon to create amazing digital experiences.</h3>
+      </div>
     </div>
     <!-- section code starts here -->
     <div class="main-content">
       <section class="container">
         <div class="row">
-          <div class="section-top">
-              <h1 id="h1-font"><b>Create Your Free Account</b></h1>
-              <h3 id="h3-font">Join over 150,000 developers using Pantheon to create amazing digital experiences.</h3>
-          </div>
           <div class="section-middle">
               <div class="section-left">
                 <img src="images/img1.png" alt="computer">
@@ -83,20 +83,19 @@
                     </div>
 
                     <div>
-                      <p class="chkbox">
-                      <ul style="list-style-type:none;">  <li>
-
-
-                      <input type="checkbox" class="chkbox">Are you an agency?<small>(additional WebOps tools for agency developers</small>.
-
-                      </li>
-
-                        <li><input type="checkbox" class="chkbox">Are you an EDU?<small>(additional features to manage your school's sites)</small>.
-                        </li>
-
-                          <li style="margin-left:-38%"><input type="checkbox" class="chkbox"><small>I agree to Pantheon's</small> <a href="#">Terms of Use</a>.
+                      <div class="chkbox">
+                        <ul style="list-style-type:none;">
+                          <li>
+                            <input type="checkbox" class="chkbox"> Are you an agency?<small>(additional WebOps tools for agency developers</small>.
                           </li>
-                        </p>
+                          <li>
+                            <input type="checkbox" class="chkbox"> Are you an EDU?<small>(additional features to manage your school's sites)</small>.
+                          </li>
+                          <li style="margin-left:-38%">
+                            <input type="checkbox" class="chkbox"><small> I agree to Pantheon's</small> <a href="#">Terms of Use</a>.
+                          </li>
+                        </ul>
+                      </div>
                       </div>
                     <button id="b2">Sign Up</button>
                     <span><p>OR</p></span>
