--- a/html_assignment/register.html
+++ b/html_assignment/register.html
@@ -85,8 +85,6 @@
                         </div>
                       </div>
 
-
-
                       <div class="chkbox">
                         <ul style="list-style-type:none;">
                           <li>
@@ -95,12 +93,12 @@
                           <li>
                             <input type="checkbox" class="chkbox"> Are you an EDU?<small>(additional features to manage your school's sites)</small>.
                           </li>
-                          <li style="margin-left:-30%">
+                          <li>
                             <input type="checkbox" class="chkbox"> I agree to Pantheon's <a href="#">Terms of Use</a>.
                           </li>
                         </ul>
                       </div>
-                      
+
                     <button id="b2">Sign Up</button>
                     <span><p style="font-weight:100">or</p></span>
                     <button id='b3'>Connect with Google</button>
@@ -117,11 +115,11 @@
     <div class="footer">
       <h6 style="color:#616e77;padding-bottom:+5px"><b>YOU'RE IN GOOD COMPANY:</b></h6>
       <div class"foot-img">
-    <div ><img src="images/ibm.svg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
-      <div><img src="images/yale.svg">  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
-    <div>  <img src="images/un.svg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
-  <div><button id="b4" type="button">more</button></div>
-    </div>
+    <img src="images/ibm.svg" style="margin:30px 50px">
+      <img src="images/yale.svg" style="margin:30px 50px">
+     <img src="images/un.svg" style="margin:30px 200px  30px 50px">
+  <button id="b4" type="button">more</button>
+</div>
 </div>
   </body>
 </html>
