--- a/html_assignment/register.html
+++ b/html_assignment/register.html
@@ -25,13 +25,13 @@
           <div class="section-middle">
               <div class="section-left">
                 <img src="images/img1.png" alt="computer">
-                <div>
+                <div style="margin-top:+80px">
                   <h3><b>All Pantheon Plans Include:<b></h3>
                   <ul style="list-style-type:none">
-                    <li><h3 class="fa fa-check fa-sm-6">Two Free Sandbox Sites</h3></li>
-                    <li><h3 class="fa fa-check fa-sm-6">Git-Based Dev, Test, And Live Environments</h3></li>
-                    <li><h3 class="fa fa-check fa-sm-6">Free HTTPS (SSL) Certificates</h3></li>
-                    <li><h3 class="fa fa-check fa-sm-6" >Integrated Content Delivery Network (CDN)</h3></li>
+                    <li><h3 class="fa fa-sm-6"> <i class="fa fa-check"></i> Two Free Sandbox Sites</h3></li>
+                    <li><h3 class="fa fa-sm-6"> <i class="fa fa-check"></i>Git-Based Dev, Test, And Live Environments</h3></li>
+                    <li><h3 class="fa fa-sm-6"> <i class="fa fa-check"></i>Free HTTPS (SSL) Certificates</h3></li>
+                    <li><h3 class="fa fa-sm-6"> <i class="fa fa-check"></i>Integrated Content Delivery Network (CDN)</h3></li>
                   </ul>
                 </div>
               </div>
@@ -88,13 +88,13 @@
                       <div class="chkbox">
                         <ul style="list-style-type:none;">
                           <li>
-                            <input type="checkbox" class="chkbox"> Are you an agency?<small>(additional WebOps tools for agency developers</small>.
+                            <input type="checkbox"> Are you an agency?<small>&nbsp;&nbsp;(additional WebOps tools for agency developers</small>.
                           </li>
                           <li>
-                            <input type="checkbox" class="chkbox"> Are you an EDU?<small>(additional features to manage your school's sites)</small>.
+                            <input type="checkbox"> Are you an EDU?<small>&nbsp;&nbsp;(additional features to manage your school's sites)</small>.
                           </li>
                           <li>
-                            <input type="checkbox" class="chkbox"> I agree to Pantheon's <a href="#">Terms of Use</a>.
+                            <input type="checkbox"> I agree to Pantheon's &nbsp;<a href="#">Terms of Use</a>.
                           </li>
                         </ul>
                       </div>
