button hover updated

--- a/html_assignment/register.html
+++ b/html_assignment/register.html
@@ -99,9 +99,9 @@
                         </ul>
                       </div>
 
-                    <button id="b2">Sign Up</button>
+                    <button class="b2">Sign Up</button>
                     <span><p style="font-weight:100">or</p></span>
-                    <button id='b3'>Connect with Google</button>
+                    <button class='b3'>Connect with Google</button>
                   </div>
                 </form>
               </div>
