fa-google class added

--- a/html_assignment/register.html
+++ b/html_assignment/register.html
@@ -101,7 +101,7 @@
 
                     <button class="b2">Sign Up</button>
                     <span><p style="font-weight:100">or</p></span>
-                    <button class='b3'>Connect with Google</button>
+                    <button class='b3'><i class="fa fa-google"></i>Connect with Google</button>
                   </div>
                 </form>
               </div>
