--- a/html_assignment/register.html
+++ b/html_assignment/register.html
@@ -100,7 +100,9 @@
                       </div>
 
                     <button class="b2">Sign Up</button>
+                    <div style="width:100%;">
                     <span><p style="font-weight:100">or</p></span>
+                  </div>
                     <button class='b3'><i class="fa fa-google"></i>Connect with Google</button>
                   </div>
                 </form>
