--- a/php-mysql_assignment/register.html
+++ b/php-mysql_assignment/register.html
@@ -12,6 +12,7 @@
     <form>
     <div>
       <div class="main">
+        <label>Enter your credentials to signup:</label>
       <div class="col-md-6 col-sm-12">
         <input type="text" id="input-type" name="firstname" placeholder="Enter first name" class="forminput"/>
       </div>
