--- a/php-mysql_assignment/index.html
+++ b/php-mysql_assignment/index.html
@@ -15,6 +15,7 @@
         <form>
           <div class="row">
             <div class="main">
+              <label>Enter your login details:</label>
             <div class="col-md-6 col-sm-12">
               <input type="text" id="input-type" name="username" placeholder="Enter username name" class="forminput"/>
             </div>
